--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,16 @@
 <resources>
     <string name="app_name">Diritto Pubblico</string>
     <string name="action_settings">Settings</string>
-    <string name="risultato">Domande a cui è stata data una risposta sbagliata</string>
-
+    <string name="risultato">Hai sbagliato le seguenti domande</string>
     <string name="title_activity_results">Risultato Quiz</string>
+    <string name="quiz_svolti">QUIZ_SVOLTI</string>
+    <string name="storico">STORICO</string>
+    <string name="quiz_svolti_textView">QUIZ SVOLTI </string>
+    <string name="errori_textView"></string>
+    <string name="scegli_quiz">SCEGLI QUIZ</string>
 
+    <string name="title_activity_fullscreen">FullscreenActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
+
